# bridger

./: .containerignore  .dockerignore  .env.default  .gitignore  .pre-commit-config.yaml  Containerfile  Dockerfile  EXHOOK-PLAN.md  EXHOOK.md  NOTES.md  README.md  VIRT-NODE-PLAN.md  compose.yaml  embed.json  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: build.yml
bridge/: __init__.py  __main__.py  db.py  mesh.py  mqtt.py
bridger/: __init__.py  __main__.py  bot.py  cli.py  config.py  crypto.py  dataclasses.py  db.py  deduplication.py  gateway.py  http.py  influx.py  log.py  mesh.py  mqtt.py  utils.py
bridger/cogs/: mqtt.py  testmsg.py
bridger/dataclasses/: __init__.py  base.py  meshcore.py  meshtastic.py
bridger/emqx/: __init__.py  api.py  authentication.py  authorization.py  schema.py
bridger/exhook/: README.md  __init__.py  __main__.py  config.py  filter.py  server.py
bridger/influx/: __init__.py  interfaces.py
bridger/mesh/: __init__.py  __main__.py  base.py  handler_registry.py
config/: deploy.sh  generate_apikey.sh
config/loki/: loki.yaml  (+2 more)
logo/: logo-social.afdesign  logo-wide.afdesign  logo.afdesign  logo.afpackage
tests/: conftest.py  test_cli.py  test_crypto.py  test_dataclasses.py  test_db.py  test_deduplication.py  test_emqx.py  test_emqx_api.py  test_emqx_authentication.py  test_emqx_authorization.py  test_emqx_schema.py  test_exhook.py  test_gateway.py  test_handler.py  test_http.py  test_influx.py  test_mesh.py  test_mqtt.py  test_shared_message_processing.py  test_testmsg.py  test_utils.py  test_virtual_node.py
(+48 files in other folders)
